-Cleaned up about section to use regularly oriented text (no more rotation) -Centered navigation buttons -Corrected GitHub ribbon alignment

--- a/public/stylesheets/partials/ribbon.styl
+++ b/public/stylesheets/partials/ribbon.styl
@@ -2,8 +2,8 @@
   background-color #a00
   overflow hidden
   position absolute
-  left -8.5em
-  top 7.0em
+  left -7.5em
+  top 6.0em
   -moz-transform rotate(-45deg)
   -webkit-transform rotate(-45deg)
   -moz-box-shadow 0 0 1em #888
