--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -85,7 +85,7 @@ header
     color #888
   ul
     display block
-    text-align right
+    text-align center
     li      
       display inline
       margin 0 auto
@@ -95,22 +95,25 @@ header
         font-weight bold
         color red
         text-decoration none
-        text-shadow .10em .01em .05em light-shadow;        
+        text-shadow .10em .01em .05em light-shadow;  
+              
+/* Generic Section Stuff
+-----------------------------------------------------------------------------*/ 
+.container
+  width 100%
 
 
 /* About Section
 -----------------------------------------------------------------------------*/ 
 #about
-  width 100%
   .title
     column(3)
     padding 0
     margin 0
     h1
-      transform rotate(-90deg)
       font-size 12em
       font-family "Lobster"
-      text-align left
+      text-align center
       text-shadow 0 0 0.05em #444
   .content
     .column
